# wxyc-etl

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: charset-corpus-drift.yml  check-ci-marker-sync.yml  ci.yml  release.yml
data/: wxyc_identity_match_functions.sql  wxyc_unaccent.rules
docs/: architecture.md  ci.md  cli-convention.md  normalization-audit.md  normalization.md  observability.md  postgres-analog-vendoring.md  python-bindings.md  releases.md  testing.md  wxyc-postgres-image.md
infra/wxyc-postgres/: Dockerfile.pg16  Dockerfile.pg17  smoke-test.sh  wxyc-entrypoint.sh
scripts/: check_marker_ci_sync.py  install_wxyc_unaccent.sh  test_check_marker_ci_sync.py
tests/: test_wheel_lifecycle.py
wxyc-etl/: Cargo.toml
wxyc-etl-python/: Cargo.toml  pyproject.toml
wxyc-etl-python/python/wxyc_etl/: __init__.py  logger.py
wxyc-etl-python/src/: fuzzy.rs  import_utils.rs  lib.rs  parser.rs  pg.rs  schema.rs  state.rs  text.rs
wxyc-etl-python/tests/: test_charset_torture.py  test_deprecations.py  test_edge_cases.py  test_forms.py  test_forms_none.py  test_identity.py  test_import.py  test_import_utils.py  test_logger.py  test_parser.py  test_performance.py  test_pg.py  test_schema.py  test_state.py  test_text.py
wxyc-etl/src/: cli.rs  lib.rs  logger.rs
wxyc-etl/src/csv_writer/: mod.rs  writer.rs
wxyc-etl/src/fuzzy/: batch.rs  classify.rs  metrics.rs  mod.rs  resolve.rs
wxyc-etl/src/import/: dedup.rs  mapping.rs  mod.rs
wxyc-etl/src/parser/: mod.rs  mysql.rs
wxyc-etl/src/pg/: admin.rs  batch.rs  copy.rs  dedup.rs  mod.rs  text.rs
wxyc-etl/src/pipeline/: mod.rs  processor.rs  runner.rs  scanner.rs  writer.rs
wxyc-etl/src/schema/: discogs.rs  entity.rs  library.rs  mod.rs  musicbrainz.rs  wikidata.rs
wxyc-etl/src/sqlite/: mod.rs  writer.rs
wxyc-etl/src/state/: introspect.rs  mod.rs  state.rs
wxyc-etl/src/text/: batch.rs  compilation.rs  filter.rs  folds.rs  forms.rs  identity.rs  mod.rs  mojibake.rs  normalize.rs  split.rs
wxyc-etl/tests/: charset_torture.rs  forms_ascii.rs  forms_match.rs  forms_storage.rs  identity_normalization_parity.rs  integration_modules.rs  panic_recovery.rs  pg_error_tests.rs  postgres_parity_test.rs  python_parity.rs  regression_report.rs  wxyc_unaccent_rules_test.rs
wxyc-etl/tests/fixtures/: identity_normalization_cases.csv
