[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wxyc-etl"
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
markers = [
    "unit: pure logic tests, no external dependencies",
    "postgres: needs PostgreSQL (gated by DATABASE_URL_TEST)",
    "integration: needs external service or fixture data",
    "e2e: full pipeline end-to-end test",
    "parity: old vs new implementation comparison",
    "slow: marks tests as slow",
    "perf: performance benchmarks (require release build)",
]
addopts = "-m 'not integration and not postgres and not e2e and not parity and not slow and not perf'"
testpaths = ["tests"]
