[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wxyc-etl"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "sentry-sdk>=2.0",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "wxyc_etl._native"

# ci-sync-skip: perf reason: benchmarks require a release-built wheel and are run manually
[tool.pytest.ini_options]
markers = [
    "perf: performance benchmarks (require release build, manual run only)",
]
addopts = "-m 'not perf'"
testpaths = ["tests"]
