[package]
name = "wxyc-etl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared ETL crate for the WXYC music data pipeline"

[dependencies]
# text module
unicode-normalization = "0.1"
unicode_categories = "0.1"

# pg module
postgres = "0.19"
itoa = "1"

# pipeline module
crossbeam-channel = "0.5"
rayon = "1.10"

# csv module
csv = "1.3"

# sqlite module
rusqlite = { version = "0.31", features = ["bundled"] }

# state/import modules
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# fuzzy module
strsim = "0.11"

# parser module
memmap2 = "0.9"
memchr = "2"

# shared
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# logger module
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
tracing-log = "0.2"
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest"] }
sentry-tracing = "0.34"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
